# mandybrot_gpu

./: pyproject.toml
mandybrot_gpu/: __init__.py  sample.py
scripts/: first_run.py  run.py
