[tool.poetry]
name = "mandybrot_gpu"
version = "0.1.0"
description = "Plot the magical Mandelbrot set with a GPU."
authors = ["sl484 <simon.rw.lance@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pyopencl = "^2022.3.1"
Pillow = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
